// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> renders correctly 1`] = `
<div
  className="container"
>
  <Header />
  <div
    className="content"
  >
    <Switch />
  </div>
  <Connect(Footer) />
  <Connect(Player) />
</div>
`;

exports[`<App /> renders plainpost correctly 1`] = `
<div
  className="container"
>
  <div
    className="content"
  >
    <Switch />
  </div>
</div>
`;
